--- a/Src/CSS/responsive.css
+++ b/Src/CSS/responsive.css
@@ -1242,11 +1242,13 @@
     .menu {
         flex-direction: column;
         align-items: center;
+        margin: 0px 5%;
+        /* padding: 3%; */
     }
 
     .menu:nth-child(3) {
         flex-direction: column;
-        padding-bottom: 5%;
+        padding: 10% 0px;
     }
     
     .menu:nth-child(5) {
@@ -1369,7 +1371,8 @@
     }
 
     .image-media {
-        width: 7%;
+        width: 8%;
+        margin: 10px 10px 0px 10px;
     }
 
     .text-end {
